examples/test/testpolicy11086.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11086
  namespace: namespace382
spec:
  podSelector:
    matchLabels:
      key19: value8
      key26: value28
      key40: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value34
          key40: value48
          key35: value8
      podSelector:
        matchLabels:
          key20: value14
          key30: value1
